# CCBT-2025-Parallel-Botanical-Garden-Proto

./: .gitignore  README.md  app.py  install.sh  main.py  pca9685_osc_led_server.py  pca9685_osc_led_server_v2.py  pyproject.toml  test.py
api/: audio_effects.py  llm.py  osc.py  text_transform.py  tts.py  utils.py
app/: controller.py
bi/: __init__.py  controller.py  models.py  utils.py
config/: bi_position.csv  config.json  networks.csv  ngwords.json  plant_sensor_config.json
docs/: android_maria_all.jsonl  boot-check-setup.md  input_controller.md  led_receiving_feature.md  monitor.md  plan.md  plant_sensor.md  requirements.md  tasks.md
input_controller/: __init__.py  audio_backend.py  check_audio.py  config.py  input_config.example.json  main.py  mic.py  plant_sensor_processor.py  sender.py  sensor_receiver.py  soft_prefix.py  speaker.py  stt.py  test_sensor_input.py
monitor/: README.md  __init__.py  app.py  bi_logger.py  requirements.txt  ssh_manager.py
runpod/: README.md  Runpod_meloTTS_JP.ipynb  osc_send_test.py  osc_to_runpod_json.py  runpod_a_make_voice.py  runpod_config.json  runpod_manager.py  setup_ubuntu_venv.sh  ssh_helper.py  start_runpod_pipeline.sh  ubuntu_puller.py  ubuntu_sender.py
scripts/: boot_check.sh  check_all.py  check_audio.py  check_cf.py  check_led.py  check_llm.py  check_tts.py  deploy_sampling.sh  download_and_install_soft_prefix.sh  download_tinyswallow.sh  install.sh  install_argostranslate_packages.sh  install_network.sh  led_fade.py  restart_all.sh  restart_llm.sh  restart_melotts.sh  send_bi_input.py  setup_audio_antipop.sh  (+5 more)
(+30 files in other folders)
